--- a/index.html
+++ b/index.html
@@ -14,26 +14,39 @@
         <div class="main-menu__container container">
           <a href="./index.htm" class="main-menu__img-container scrollto"> </a>
 
-          <!-- <div class="main-menu__links">
+          <div class="main-menu__links">
             <div class="main-menu__grades grades">
-              <a href="/pages/select.html" class="grades__link link-underline"
-                >5-7 класс</a
+              <a
+                href="/pages/select.html"
+                class="grades__link link-underline"
+                data-select="Pov"
+                >Успеваемость</a
               >
-              <a href="/pages/select.html" class="grades__link link-underline"
-                >8-9 класс</a
+              <a
+                href="/pages/select.html"
+                class="grades__link link-underline"
+                data-select="OGE"
+                >Подготовка к ОГЭ</a
               >
-              <a href="/pages/select.html" class="grades__link link-underline"
-                >10-11 класс</a
+              <a
+                href="/pages/select.html"
+                class="grades__link link-underline"
+                data-select="EGE"
+                >Подготовка к ЕГЭ</a
               >
             </div>
 
             <div class="main-menu__btn-container">
-              <button class="one-color-btn one-color-btn--main">Курсы</button>
+              <a
+                href="/pages/select.html"
+                class="one-color-btn one-color-btn--main"
+                >Курсы</a
+              >
             </div>
-          </div> -->
-          <a class="main-menu__phone" href="tel:+79803740656">
+          </div>
+          <!-- <a class="main-menu__phone" href="tel:+79803740656">
             8 (980) 374-06-56
-          </a>
+          </a> -->
         </div>
       </nav>
     </header>
@@ -42,35 +55,19 @@
       <section class="about">
         <div class="about__container container">
           <div class="about__info info">
-            <h1 class="info__title">
-              Майский марафон по математике 22 мая - 7 июня
-            </h1>
+            <h1 class="info__title">Школа математики для 5-11 классов</h1>
 
             <div class="info__text">
               <ul>
-                <!-- <li>Готовим к ЕГЭ с любого уровня на необходимый</li>
+                <li>Готовим к ЕГЭ с любого уровня на необходимый</li>
                 <li>Развиваем логику и интерес к математике</li>
-                <li>Наши выпускники учатся в лучших вузах страны</li> -->
-                <li>14 живых уроков по 60-90 минут в конференции Zoom</li>
-                <li>
-                  Занятия в мини-группах по 5-7 человек с камерами, микрофонами
-                  и возможностью задать любые вопросы
-                </li>
-                <li>
-                  Повторим все темы и задания из ОГЭ, дадим только необходимую
-                  теорию
-                </li>
-                <li>
-                  Расскажем, как распределить время на экзамене и справиться с
-                  волнением
-                </li>
+                <li>Наши выпускники учатся в лучших вузах страны</li>
               </ul>
             </div>
 
             <div class="info__buttons">
-              <!-- <a href="" class="btn-neo">Записаться</a>
-              <a href="#" class="link-underline">Попробовать бесплатно</a> -->
-              <a href="#feedback" class="btn-neo">Присоединиться к марафону</a>
+              <a href="" class="btn-neo info__btn-main">Записаться</a>
+              <a href="#" class="link-underline">Попробовать бесплатно</a>
             </div>
           </div>
 
@@ -80,162 +77,7 @@
         </div>
       </section>
 
-      <section class="marathon">
-        <h2 class="marathon__title section-title">Расписание марафона</h2>
-
-        <div class="marathon__grid container">
-          <div class="marathon__lesson lesson">
-            <p class="lesson__weekday">пн</p>
-            <div class="lesson__date lesson-stcker">22 мая</div>
-            <p class="lesson__text">
-              Действия с обыкновенными и десятичными дробями, степенями. Расчеты
-              по формулам
-            </p>
-            <p class="lesson__assignment">Задания: №6, 7, 12</p>
-          </div>
-          <div class="marathon__lesson lesson">
-            <p class="lesson__weekday">вт</p>
-            <div class="lesson__date lesson-stcker">23 мая</div>
-            <p class="lesson__text">
-              Дествия со степенями, корнями, формулы сокращенного умножениия.
-              Линейные, квадратные, рациональные уравнения и неравенства, а
-              также их системы
-            </p>
-            <p class="lesson__assignment">Задания: №8, 9, 13</p>
-          </div>
-          <div class="marathon__lesson lesson">
-            <p class="lesson__weekday">ср</p>
-            <div class="lesson__date lesson-stcker">24 мая</div>
-            <p class="lesson__text">
-              Задание ВТОРОЙ ЧАСТИ. Выражения, уревнения, неравенства, системы
-            </p>
-            <p class="lesson__assignment">Задания: №20</p>
-          </div>
-          <div class="marathon__lesson lesson">
-            <p class="lesson__weekday">чт</p>
-            <div class="lesson__date lesson__date--color lesson-stcker">
-              25 мая
-            </div>
-            <p class="lesson__text">ОТДЫХ</p>
-          </div>
-          <div class="marathon__lesson lesson">
-            <p class="lesson__weekday">пт</p>
-            <div class="lesson__date lesson-stcker">26 мая</div>
-            <p class="lesson__text">
-              Теория вероятностей, арифметическая, геометтричесская прогрессии
-            </p>
-            <p class="lesson__assignment">Задания: №10, 14</p>
-          </div>
-          <div class="marathon__lesson lesson">
-            <p class="lesson__weekday">сб</p>
-            <div class="lesson__date lesson-stcker">27 мая</div>
-            <p class="lesson__text">
-              Задание ВТОРОЙ ЧАСТИ. Задачи на движение, работу, сплавы и смеси
-            </p>
-            <p class="lesson__assignment">Задания: №21</p>
-          </div>
-          <div class="marathon__lesson lesson">
-            <p class="lesson__weekday">вс</p>
-            <div class="lesson__date lesson-stcker">28 мая</div>
-            <p class="lesson__text">Графики функций</p>
-            <p class="lesson__assignment">Задания: №11</p>
-          </div>
-          <div class="marathon__lesson lesson">
-            <p class="lesson__weekday">пн</p>
-            <div class="lesson__date lesson-stcker">29 мая</div>
-            <p class="lesson__text">
-              Задание ВТОРОЙ ЧАСТИ. Построение графиков функций
-            </p>
-            <p class="lesson__assignment">Задания: №22</p>
-          </div>
-          <div class="marathon__lesson lesson">
-            <p class="lesson__weekday">вт</p>
-            <div class="lesson__date lesson__date--color lesson-stcker">
-              30 мая
-            </div>
-            <p class="lesson__text">ОТДЫХ</p>
-          </div>
-          <div class="marathon__lesson lesson">
-            <p class="lesson__weekday">ср</p>
-            <div class="lesson__date lesson-stcker">31 мая</div>
-            <p class="lesson__text">
-              Треугольники. Их свойства, формулы площадей
-            </p>
-            <p class="lesson__assignment">Задания: №15, 17, 18, 19</p>
-          </div>
-          <div class="marathon__lesson lesson">
-            <p class="lesson__weekday">чт</p>
-            <div class="lesson__date lesson-stcker">01 июня</div>
-            <p class="lesson__text">
-              Четырехугольники. Их свойства, формулы площадей
-            </p>
-            <p class="lesson__assignment">Задания: №15, 17, 18, 19</p>
-          </div>
-          <div class="marathon__lesson lesson">
-            <p class="lesson__weekday">пт</p>
-            <div class="lesson__date lesson-stcker">02 июня</div>
-            <p class="lesson__text">
-              Окружности. Углы, касательные, описанные, вписанные окружности
-            </p>
-            <p class="lesson__assignment">Задания: №16, 18, 19</p>
-          </div>
-          <div class="marathon__lesson lesson">
-            <p class="lesson__weekday">сб</p>
-            <div class="lesson__date lesson-stcker">03 июня</div>
-            <p class="lesson__text">
-              Геометрия ВТОРОЙ ЧАСТИ. Первый уровень сложности
-            </p>
-            <p class="lesson__assignment">Задания: №23, 24</p>
-          </div>
-          <div class="marathon__lesson lesson">
-            <p class="lesson__weekday">вс</p>
-            <div class="lesson__date lesson-stcker">04 июня</div>
-            <p class="lesson__text">
-              Геометрия ВТОРОЙ ЧАСТИ. Второй уровень сложности
-            </p>
-            <p class="lesson__assignment">Задания: №24, 25</p>
-          </div>
-          <div class="marathon__lesson lesson">
-            <p class="lesson__weekday">пн</p>
-            <div class="lesson__date lesson-stcker">05 июня</div>
-            <p class="lesson__text">
-              Участки, квартиры, мобильная связь, листы бумаги
-            </p>
-            <p class="lesson__assignment">Задания: №1-5</p>
-          </div>
-          <div class="marathon__lesson lesson">
-            <p class="lesson__weekday">вт</p>
-            <div class="lesson__date lesson__date--color lesson-stcker">
-              06 июня
-            </div>
-            <p class="lesson__text">ОГЭ по русскому языкудание</p>
-          </div>
-          <div class="marathon__lesson lesson">
-            <p class="lesson__weekday">ср</p>
-            <div class="lesson__date lesson-stcker">07 июня</div>
-            <p class="lesson__text">Шины, страховки, путешествия</p>
-            <p class="lesson__assignment">Задания: №1-5</p>
-          </div>
-          <div class="marathon__lesson lesson">
-            <p class="lesson__weekday">чт</p>
-            <div class="lesson__date lesson__date--color lesson-stcker">
-              08 июня
-            </div>
-            <p class="lesson__text">ОТДЫХ</p>
-          </div>
-          <div class="marathon__lesson lesson">
-            <p class="lesson__weekday">пт</p>
-            <div class="lesson__date lesson__date--color lesson-stcker">
-              09 июня
-            </div>
-            <p class="lesson__text">ЭКЗАМЕН</p>
-          </div>
-          <div class="marathon__lesson lesson"></div>
-          <div class="marathon__lesson lesson lesson--hidden"></div>
-        </div>
-      </section>
-
-      <!-- <section class="choice">
+      <section class="choice">
         <div class="container">
           <div class="choice__cards">
             <div class="choice__card">
@@ -251,7 +93,10 @@
                   class="choice__img"
                 />
               </div>
-              <a href="" class="choice__card-btn matte-blue-background"
+              <a
+                href="/pages/select.html"
+                class="choice__card-btn matte-blue-background"
+                data-select="course"
                 >Подробнее &#10140;</a
               >
             </div>
@@ -269,7 +114,10 @@
                   class="choice__img"
                 />
               </div>
-              <a href="" class="choice__card-btn matte-pink-background"
+              <a
+                href="/pages/select.html"
+                class="choice__card-btn matte-pink-background"
+                data-select="mini-group"
                 >Подробнее &#10140;</a
               >
             </div>
@@ -287,15 +135,18 @@
                   class="choice__img"
                 />
               </div>
-              <a href="" class="choice__card-btn matte-orange-background"
+              <a
+                href="/pages/select.html"
+                class="choice__card-btn matte-orange-background"
+                data-select="mentor"
                 >Подробнее &#10140;</a
               >
             </div>
           </div>
         </div>
-      </section> -->
+      </section>
 
-      <!-- <section class="test-sale">
+      <section class="test-sale">
         <div class="container">
           <div class="test-sale__block">
             <div class="test-sale__info">
@@ -308,7 +159,7 @@
             </div>
           </div>
         </div>
-      </section> -->
+      </section>
 
       <section class="achievements">
         <div class="container">
@@ -359,11 +210,8 @@
 
       <section id="feedback" class="feedback">
         <div class="container">
-          <!-- <h2 class="feedback__title section-title">
-            Хотите задать дополнительные вопросы?
-          </h2> -->
           <h2 class="feedback__title section-title">
-            Чтобы присоединиться, оставьте Ваши контакты
+            Хотите задать дополнительные вопросы?
           </h2>
           <div class="feedback-container">
             <div class="feedback-container__img-container">
@@ -375,18 +223,12 @@
             </div>
 
             <div class="feedback-container__form-block">
-              <!-- <h3 class="feedback-container__title">Оставьте заявку</h3> -->
-              <h3 class="feedback-container__title">
-                Мы свяжемся с Вами, ответим на вопросы и запишем на марафон
-              </h3>
-              <!-- <p class="feedback-container__text">
+              <h3 class="feedback-container__title">Оставьте заявку</h3>
+              <p class="feedback-container__text">
                 для записи на бесплатный урок
-              </p> -->
-              <form
-                action="/script/tomail.php"
-                method="post"
-                class="feedback-container__form feedback-form"
-              >
+              </p>
+
+              <form class="feedback-container__form feedback-form" id="form">
                 <label
                   for="name"
                   class="feedback-form__name standart-small-text"
@@ -406,22 +248,12 @@
                 >
                 <input name="phone" class="_tel" type="text" required />
 
-                <!-- <div class="feedback-form__choice">
-                  <label>
-                    <span class="standart-small-text">Я родитель</span>
-                    <input type="radio" name="user-type" value="student" />
-                  </label>
-                  <label>
-                    <span class="standart-small-text">Я школьник</span>
-                    <input type="radio" name="user-type" value="parent" />
-                  </label>
-                </div> -->
                 <ul class="feedback-form__choice">
                   <li>
                     <label class="standart-small-text">Я родитель</label>
                     <input
                       name="user-type"
-                      value="Родитель"
+                      value="parent"
                       type="radio"
                       name="1"
                       checked
@@ -441,7 +273,7 @@
                     <label class="standart-small-text">Я школьник</label>
                     <input
                       name="user-type"
-                      value="Ученик"
+                      value="student"
                       type="radio"
                       name="1"
                     />
@@ -682,9 +514,11 @@
     </main>
 
     <script src="./script/inputs.js"></script>
-    <script src="./script/carusel.js"></script>
-    <script src="./script/scroll.js"></script>
     <script src="./script/marathon.js"></script>
+    <script src="./script/scroll.js"></script>
+    <script src="./script/carusel.js"></script>
+    <script src="./script/trans.js"></script>
+    <script src="./script/formSend.js"></script>
     <script src="https://hammerjs.github.io/dist/hammer.js"></script>
   </body>
 </html>
