--- a/pages/select.html
+++ b/pages/select.html
@@ -12,21 +12,11 @@
     <header>
       <nav class="main-menu">
         <div class="main-menu__container container">
-          <a href="../index.html" class="main-menu__img-container">
-            <img src="../img/icons/logo.svg" alt="логотип" />
+          <a href="../" class="main-menu__img-container scrollto"> </a>
+
+          <a class="main-menu__phone" href="tel:+79803740656">
+            8 (980) 374-06-56
           </a>
-
-          <div class="main-menu__links">
-            <div class="main-menu__grades grades">
-              <a href="#" class="grades__link link-underline">5-7 класс</a>
-              <a href="#" class="grades__link link-underline">8-9 класс</a>
-              <a href="#" class="grades__link link-underline">10-11 класс</a>
-            </div>
-
-            <div class="main-menu__btn-container">
-              <button class="one-color-btn one-color-btn--main">Курсы</button>
-            </div>
-          </div>
         </div>
       </nav>
     </header>
@@ -35,7 +25,7 @@
       <section class="filters">
         <div class="filters__container container">
           <select id="class-select" class="filters__select-field select-block">
-            <option value="all" selected>Выбрать</option>
+            <option value="all" selected>Класс</option>
             <option value="5">5 класс</option>
             <option value="6">6 класс</option>
             <option value="7">7 класс</option>
@@ -46,252 +36,122 @@
           </select>
 
           <select id="group-select" class="filters__select-field select-block">
-            <option value="all" selected>Выбрать</option>
-            <option value="EGE">Сдать ЕГЭ</option>
-            <option value="OGE">Сдать ОГЭ</option>
-            <option value="Pov">Повысить успеваемость</option>
+            <option value="all" selected>Цель</option>
+            <option value="EGE" data-select="EGE">Сдать ЕГЭ</option>
+            <option value="OGE" data-select="OGE">Сдать ОГЭ</option>
+            <option value="Pov" data-select="Pov">Повысить успеваемость</option>
           </select>
 
           <select id="type-select" class="filters__select-field select-block">
-            <option value="all" selected>Выбрать</option>
-            <option value="mini-group">Мини-группы</option>
-            <option value="course">Курсы</option>
-            <option value="mentor">Репетиторы</option>
+            <option value="all" selected>Тип занятий</option>
+            <option value="mini-group" data-select="mini-group">
+              Мини-группы
+            </option>
+            <option value="course" data-select="course">Курсы</option>
+            <option value="mentor" data-select="mentor">Репетиторы</option>
           </select>
         </div>
       </section>
 
       <section id="product-list" class="product-list">
         <div class="product-list__wrapper container">
-          <div
+          <!-- <div
             class="product product-list__item product-item"
             data-classes="8"
             data-groups="1"
             data-types="small"
           >
-            <div class="product-item__img-wrapper">
-              <div class="product-item__img-container">
-                <img
-                  src="../img/photos/mentors/ViktoriaVi.jpg"
-                  alt="Фото"
-                  class="product-item__img"
-                />
+            <div class="product-item__inner">
+              <div class="product-item__img-wrapper">
+                <div class="product-item__img-container">
+                  <img
+                    src="../img/photos/mentors/ViktoriaVi.jpg"
+                    alt="Фото"
+                    class="product-item__img"
+                  />
+                </div>
                 <div class="product-item__img-description">
                   <h3 class="product-item__img-title">Viktoria Vi</h3>
                   <p class="product-item__img-text">Lorem ipsum dolor</p>
                 </div>
               </div>
-            </div>
 
-            <div class="product-item__info-container">
-              <div class="product-item__info-up">
-                <h2 class="product-item__info-title">
-                  Репетитор по математике для 5-9 классов
-                </h2>
+              <div class="product-item__info-container">
+                <div class="product-item__info-up">
+                  <h2 class="product-item__info-title">
+                    Репетитор по математике для 5-9 классов
+                  </h2>
 
-                <p class="product-item__info-text">
-                  На занятиях с репетитором по математике для 5-9 классов ученик
-                  сможет устранить пробелы в знаниях за предыдущие годы,
-                  одновременно осваивая текущие темы по предмету
-                </p>
+                  <p class="product-item__info-text">
+                    На занятиях с репетитором по математике для 5-9 классов
+                    ученик сможет устранить пробелы в знаниях за предыдущие
+                    годы, одновременно осваивая текущие темы по предмету
+                  </p>
 
-                <div class="product-item__info-markers markers-list">
-                  <div class="markers-list__item marker">
-                    <div class="marker__img-container">
-                      <img
-                        src="../img/icons/book.svg"
-                        alt="icon"
-                        class="marker__img"
-                      />
-                    </div>
-
-                    <p class="marker__text">30 занятий</p>
-                  </div>
-
-                  <div class="markers-list__item marker">
-                    <div class="marker__img-container">
-                      <img
-                        src="../img/icons/lesson.svg"
-                        alt="icon"
-                        class="marker__img"
-                      />
-                    </div>
-
-                    <p class="marker__text">Небольшие группы</p>
-                  </div>
-
-                  <div class="markers-list__item marker">
-                    <div class="marker__img-container">
-                      <img
-                        src="../img/icons/phone-msg.svg"
-                        alt="icon"
-                        class="marker__img"
-                      />
-                    </div>
-
-                    <p class="marker__text">Общение в чате</p>
-                  </div>
-                </div>
-              </div>
-
-              <div class="product-item__info-down">
-                <div class="product-item__price">17 500 ₽ за курс</div>
-
-                <div class="product-item__btn-block">
-                  <button
-                    class="product-item__btn one-color-btn one-color-btn--main"
-                  >
-                    Записаться
-                  </button>
-                  <button class="product-item__btn one-color-btn">
-                    Подробнее
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div
-            class="product product-list__item product-item"
-            class="card"
-            data-classes="9"
-            data-groups="2"
-            data-types="large"
-          >
-            <div class="product-item__img-wrapper">
-              <div class="product-item__img-container">
-                <img
-                  src="../img/photos/mentors/ViktoriaVi.jpg"
-                  alt="Фото"
-                  class="product-item__img"
-                />
-                <div class="product-item__img-description">
-                  <h3 class="product-item__img-title">Viktoria Vi</h3>
-                  <p class="product-item__img-text">Lorem ipsum dolor</p>
+                  <di class="product-item__info-markers markers-list">
+                    <li class="marker__text">2 месяца</li>
+                    <li class="marker__text">Конспекты</li>
+                    <li class="marker__text">2 занятия в неделю по 90 минут</li>
+                    <li class="marker__text">5-6 человек в группе</li>
+                    <li class="marker__text">
+                      Живое общение учеников и преподавателя
+                    </li>
+                    <li class="marker__text">Домашнее задание с проверкой</li>
+                  </di>
                 </div>
               </div>
             </div>
 
-            <div class="product-item__info-container">
-              <div class="product-item__info-up">
-                <h2 class="product-item__info-title">
-                  Репетитор по математике для 5-9 классов
-                </h2>
-
-                <p class="product-item__info-text">
-                  На занятиях с репетитором по математике для 5-9 классов ученик
-                  сможет устранить пробелы в знаниях за предыдущие годы,
-                  одновременно осваивая текущие темы по предмету
-                </p>
-
-                <div class="product-item__info-markers markers-list">
-                  <div class="markers-list__item marker">
-                    <div class="marker__img-container">
-                      <img
-                        src="../img/icons/book.svg"
-                        alt="icon"
-                        class="marker__img"
-                      />
-                    </div>
-
-                    <p class="marker__text">30 занятий</p>
-                  </div>
-
-                  <div class="markers-list__item marker">
-                    <div class="marker__img-container">
-                      <img
-                        src="../img/icons/lesson.svg"
-                        alt="icon"
-                        class="marker__img"
-                      />
-                    </div>
-
-                    <p class="marker__text">Небольшие группы</p>
-                  </div>
-
-                  <div class="markers-list__item marker">
-                    <div class="marker__img-container">
-                      <img
-                        src="../img/icons/phone-msg.svg"
-                        alt="icon"
-                        class="marker__img"
-                      />
-                    </div>
-
-                    <p class="marker__text">Общение в чате</p>
-                  </div>
-                </div>
+            <div class="product-item__info-down">
+              <div class="product-item__price">
+                6 000 ₽ месяц / 10 000 ₽ за весь курс
               </div>
 
-              <div class="product-item__info-down">
-                <div class="product-item__price">17 500 ₽ за курс</div>
-
-                <div class="product-item__btn-block">
-                  <button
-                    class="product-item__btn one-color-btn one-color-btn--main"
-                  >
-                    Записаться
-                  </button>
-                  <button class="product-item__btn one-color-btn">
-                    Подробнее
-                  </button>
-                </div>
+              <div class="product-item__btn-block">
+                <button
+                  class="product-item__btn one-color-btn one-color-btn--main"
+                >
+                  Записаться
+                </button>
+                <button class="product-item__btn one-color-btn">
+                  Подробнее
+                </button>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </section>
     </main>
 
+    <footer class="footer">
+      <div class="footer__container container">
+        <div class="footer__logo-container min-logo">
+          <div class="min-logo__img"></div>
+          <div class="min-logo__text">школа математики</div>
+        </div>
+
+        <div class="footer__info-container footer-info">
+          <div class="footer-info__img img-letter"></div>
+          <p class="footer-info__text">Наша почта</p>
+          <a href="mailto:shoolreshay@gmail.com" class="footer-info__contact"
+            >shoolreshay@gmail.com</a
+          >
+        </div>
+
+        <div class="footer__info-container footer-info">
+          <div class="footer-info__img img-phone"></div>
+          <p class="footer-info__text">Бесплатная консультация</p>
+          <a href="tel:+79803740656" class="footer-info__contact"
+            >8-980-374-06-56</a
+          >
+        </div>
+
+        <div class="footer__btn-container">
+          <a href="#feedback" class="btn-neo footer__btn">Оставить заявку</a>
+        </div>
+      </div>
+    </footer>
+
     <script src="/script/product-list.js"></script>
   </body>
 </html>
-
-<!-- <label for="class-select">Select Class:</label>
-<select id="class-select">
-  <option value="all">All Classes</option>
-  <option value="5">Class 5</option>
-  <option value="6">Class 6</option>
-  <option value="7">Class 7</option>
-  <option value="8">Class 8</option>
-  <option value="9">Class 9</option>
-  <option value="10">Class 10</option>
-</select>
-
-<label for="group-select">Select Group:</label>
-<select id="group-select">
-  <option value="all">All Groups</option>
-  <option value="1">Group 1</option>
-  <option value="2">Group 2</option>
-  <option value="3">Group 3</option>
-</select>
-
-<label for="type-select">Select Type:</label>
-<select id="type-select">
-  <option value="all">All Types</option>
-  <option value="large">Large</option>
-  <option value="small">Small</option>
-</select>
-
-<div id="card-container">
-  <div class="card" data-classes="5 6 7" data-groups="1" data-types="large">
-    <h2>Card 1</h2>
-    <p>5th grade, 6th grade, 7th grade, 1st group, large group</p>
-  </div>
-  <div class="card" data-classes="6" data-groups="2" data-types="large">
-    <h2>Card 2</h2>
-    <p>6th grade, 2nd group, large group</p>
-  </div>
-  <div class="card" data-classes="7" data-groups="3" data-types="small">
-    <h2>Card 3</h2>
-    <p>7th grade, 3rd group, small group</p>
-  </div>
-  <div class="card" data-classes="8" data-groups="1" data-types="small">
-    <h2>Card 4</h2>
-    <p>8th grade, 1st group, small group</p>
-  </div>
-  <div class="card" data-classes="9" data-groups="2" data-types="large">
-    <h2>Card 5</h2>
-    <p>9th grade, 2nd group, large group</p>
-  </div>
-</div> -->
