--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
                   волнением
                 </li>
               </ul>
+              <div class="info__price">
+                Подготовиться к ОГЭ за
+                <div class="info__price-cost lesson-stcker">4500 руб.</div>
+              </div>
             </div>
 
             <div class="info__buttons">
